[UPDATE] schedule 메인 및 조회
